cmake_minimum_required(VERSION 3.14)
set(LIBRARY_OUTPUT_PATH ${dir}/lib)
set(AVR_MCU ATmega328)

project(CustomLibTest)

add_definitions("-fpack-struct")
add_definitions("-fshort-enums")
add_definitions("-Wall")
# add_definitions("-Werror")
# add_definitions("-pedantic")
# add_definitions("-pedantic-errors")
add_definitions("-funsigned-char")
add_definitions("-fdata-sections")
# add_definitions("-funsigned-bitfields")
add_definitions("-ffunction-sections")
add_definitions("-Og")
add_definitions("-g2")
add_definitions("-c")
add_definitions("-MD") 
add_definitions("-MP") 
add_definitions("-MF")
add_definitions("-std=gnu99")
add_definitions("-DF_CPU=8000000")
add_definitions("-D__I2C_LOG_ERROR__")
add_definitions("-D__EEPROM_ADDON__")

set(AVR_SOURCE_DIR ${dir}/Controller/src)
set(I2C_DIR "C:/Develop/custom_libs/i2c/debug")
set(EEPROM_DIR "C:/Develop/custom_libs/eeprom/debug")
set(L595_DIR "C:/Develop/custom_libs/shifter/debug")
set(SD_DIR "C:/Develop/custom_libs/sd/debug")

add_subdirectory(src)
