cmake_minimum_required(VERSION 3.20)

set(AVR_MCU atmega2560)
set(LOGIC_ANALYZER_TEST atmega2560)
add_compile_definitions(F_CPU=16E6)
add_compile_definitions(SERIAL_CONSOLE)
add_compile_definitions(__AVR_ATmega2560__)

project(LogicAnalyzer)

add_definitions("-fpack-struct")
add_definitions("-fshort-enums")
add_definitions("-Wall")
# add_definitions("-Werror")
# add_definitions("-pedantic")
# add_definitions("-pedantic-errors")
add_definitions("-funsigned-char")
add_definitions("-fdata-sections")
# add_definitions("-funsigned-bitfields")
add_definitions("-ffunction-sections")
add_definitions("-Og")
add_definitions("-g2")
add_definitions("-c")
add_definitions("-MD") 
add_definitions("-MP") 
add_definitions("-MF")
add_definitions("-std=gnu99")

set(AVR-EXAMPLE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

add_subdirectory(src)
